# ccflow

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LLMS.txt  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docker/: entrypoint.sh  prometheus.yml
docker/grafana/provisioning/dashboards/: default.yml
docker/grafana/provisioning/dashboards/json/: ccflow.json
docs/: API.md  ARCHITECTURE.md  TOON_RESEARCH.md  api.md  architecture.md
examples/: agent_system.py  agentic_harness.py  basic_query.py  batch_processing.py  cli_commands.py  event_handling.py  hook_system.py  http_server.py  mcp_integration.py  multi_turn_session.py  rate_limiting.py  reliability.py  session_persistence.py  session_uuid_management.py  skill_system.py  subagent_coordination.py  toon_context.py
src/ccflow/: __init__.py  agent.py  api.py  api_client.py  cli.py  commands.py  config.py  events.py  exceptions.py  executor.py  harness.py  hooks.py  manager.py  mcp.py  metrics.py  metrics_handlers.py  parser.py  permissions.py  pool.py  pricing.py  project.py  rate_limiting.py  reliability.py  server.py  session.py  skills.py  store.py  subagent.py  tools.py  toon_integration.py  trace_store.py  tracing.py  types.py
src/ccflow/stores/: __init__.py  memory.py  sqlite.py  traces.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_api_client.py  test_cli.py  test_commands.py  test_config.py  test_events.py  test_exceptions.py  test_harness.py  test_hooks.py  test_integration.py  test_manager.py  test_mcp.py  test_metrics.py  test_metrics_handlers.py  test_parser.py  test_permissions.py  test_pool.py  test_pricing.py  test_rate_limiting.py  test_reliability.py  test_server.py  test_session.py  test_session_store_integration.py  test_skills.py  test_store.py  test_subagent.py  test_tools.py  test_toon.py  test_tracing.py
tests/fixtures/cli_responses/: .gitkeep
