[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccflow"
version = "0.2.2"
description = "Production middleware bridging Claude Code CLI with SDK-like Python interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aaron Storey", email = "aaron@kymera.systems" }
]
keywords = [
    "claude",
    "anthropic",
    "cli",
    "sdk",
    "middleware",
    "llm",
    "ai",
    "toon",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "aiosqlite>=0.19",
    "tiktoken>=0.5",
    "prometheus-client>=0.17",
    "uvicorn[standard]>=0.23",
]

[project.optional-dependencies]
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
server = [
    "fastapi>=0.100",
    "websockets>=11.0",
]
api = [
    "anthropic>=0.25.0",  # Direct API fallback (optional)
]
toon = [
    "toon-format>=0.1.0",  # Token-optimized serialization
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
all = [
    "ccflow[tracing,server,api,toon,dev]",
]

[project.scripts]
ccflow = "ccflow.cli:main"

[project.urls]
Homepage = "https://github.com/astoreyai/ccflow"
Documentation = "https://github.com/astoreyai/ccflow#readme"
Repository = "https://github.com/astoreyai/ccflow"
Issues = "https://github.com/astoreyai/ccflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ccflow"]
include = ["src/ccflow/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring actual CLI",
]

[tool.coverage.run]
source = ["src/ccflow"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.isort]
known-first-party = ["ccflow"]

[tool.mypy]
python_version = "3.11"
# Relax strict mode for 0.1.0, tighten in future versions
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "toon_format.*",
    "prometheus_client.*",
    "tiktoken.*",
    "anthropic.*",
    "uvicorn.*",
    "fastapi.*",
    "starlette.*",
]
ignore_missing_imports = true
